--- a/zapoctak/zapoctak.vcxproj.filters
+++ b/zapoctak/zapoctak.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Header Files\Components\LoaderBars">
       <UniqueIdentifier>{4327a052-9d57-4649-85d3-544bcb70ca51}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Components\Game">
+      <UniqueIdentifier>{ecb2a673-3e07-4fd4-a440-17652f6b4937}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -61,6 +64,15 @@
     </ClInclude>
     <ClInclude Include="BasicStructures.h">
       <Filter>Header Files\Others</Filter>
+    </ClInclude>
+    <ClInclude Include="Landscape.h">
+      <Filter>Header Files\Components\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Tank.h">
+      <Filter>Header Files\Components\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScreen.h">
+      <Filter>Header Files\Screens</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
