--- a/zapoctak/zapoctak.vcxproj
+++ b/zapoctak/zapoctak.vcxproj
@@ -150,7 +150,6 @@
   <ItemGroup>
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MainScreen.cpp" />
     <ClCompile Include="TanksAppManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -169,7 +168,9 @@
     <ClInclude Include="NewGameScreen.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Tank.h" />
+    <ClInclude Include="TankProperties.h" />
     <ClInclude Include="TanksAppManager.h" />
+    <ClInclude Include="TextComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="font.ttf" />
