--- a/zapoctak/zapoctak.vcxproj.filters
+++ b/zapoctak/zapoctak.vcxproj.filters
@@ -25,11 +25,14 @@
     <Filter Include="Header Files\Others">
       <UniqueIdentifier>{a00d86ca-465c-48f3-a2be-e377d644d461}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Components\LoaderBars">
-      <UniqueIdentifier>{4327a052-9d57-4649-85d3-544bcb70ca51}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Components\Game">
       <UniqueIdentifier>{ecb2a673-3e07-4fd4-a440-17652f6b4937}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Components\ProgressBars">
+      <UniqueIdentifier>{4327a052-9d57-4649-85d3-544bcb70ca51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Components\Others">
+      <UniqueIdentifier>{29a06fa2-b2bf-477a-8cf9-93d070af9c06}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -40,9 +43,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MainScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -94,6 +94,12 @@
     </ClInclude>
     <ClInclude Include="BasicStaticScreen.h">
       <Filter>Header Files\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="TextComponent.h">
+      <Filter>Header Files\Components\Others</Filter>
+    </ClInclude>
+    <ClInclude Include="TankProperties.h">
+      <Filter>Header Files\Components\Game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
